[package]
name = "convert"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/caido/convert"
authors = ["Christopher Guay <chris@caido.io>", "Caido <info@caido.io>"]
readme = "README.md"
description = """
WASM bindings for caido/convert crate
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
#caido-convert = "0.1.0"
# Replace with the latest caido-convert version when publishing the package on npm
caido-convert = { path = "../caido-convert" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.69"

[profile.release]
lto = true
opt-level = 's'
